--- a/assets/themes/light.css
+++ b/assets/themes/light.css
@@ -10,6 +10,17 @@ body
 	color:#121212;
 }
 
+video
+{
+	filter:invert(100%) blur(5px);
+}
+
+
+.section
+{
+	/* background-color: rgba(255,255,255,0.5); */	
+}
+
 .sidebar
 {
 	background-color:#ddd;
