--- a/assets/themes/dark.css
+++ b/assets/themes/dark.css
@@ -19,13 +19,8 @@ video
 {
 	background-color:#000;	
 	color:#fff;
-}
-.sidebar ul
-{				
-	<!--padding:0; -->
-	list-style-type: none;
+	--highlight: #0ff;
 }
 
-.sidebar ul li:hover > ul { box-shadow: 5px 0 0 #0ff; }
 
 
