update landing page and add pages for books

--- a/assets/themes/light.css
+++ b/assets/themes/light.css
@@ -18,7 +18,11 @@ video
 
 .section
 {
-	/* background-color: rgba(255,255,255,0.5); */	
+	background-color:#fff;
+}
+.section:hover 
+{
+	background-color:#eee;
 }
 
 .sidebar
