--- a/assets/styles/common.css
+++ b/assets/styles/common.css
@@ -20,12 +20,32 @@ body
 
 .section 
 {
-	width: 70%; margin: auto; box-shadow: inset 0 0 1px currentColor;
-	transition: 0.3s;	
+	width: 80%; 
+	margin: auto;
+	margin-bottom:1em;
+	margin-top:1em;
+	
+	padding-top:1em;
+	padding-left:5%;
+	padding-bottom:4em;	
+	padding-right:5%;
+	
+	
+	/*
+	box-shadow: inset 0 0 1px currentColor;
+	*/
+	transition: 0.3s;		
 }
 .section:hover
-{				
-	box-shadow: inset 1px 1px 0px currentColor,inset -1px -1px 0px currentColor;
+{		
+	/*box-shadow: inset 1px 1px 0px currentColor,inset -1px -1px 0px currentColor;*/
+	box-shadow: 0px 0px 2px currentColor;
+}
+.section-item 
+{	
+	padding:0;
+	margin:0;
+	padding-left:5%;
 }
 
 .sidebar
@@ -63,14 +83,16 @@ body
 	height:50px; 
 	border-radius:50%;
 	background-color:currentColor;
-	transition:1.2s;
+	opacity:0.8;
+	transition:0.3s;
 }
 
 .theme-selector:hover
 {				
+	background-color:rgba(1,1,1,0);
 	box-shadow: 	
-	inset 0px 0px 24px #0a0,
-	inset 0px 0px 24px #00f,
+	inset 0px 0px 12px #0a0,
+	inset 0px 0px 12px #00f,
 	0px 0px 8px #0a0,
 	0px 0px 8px #00f;
 }
