--- a/assets/themes/dark.css
+++ b/assets/themes/dark.css
@@ -32,3 +32,23 @@ video
 {
 	background-color:#121212;
 }
+.menu-dropdown
+{
+	background-color:#000;
+}
+
+/*
+.theme-selector::before
+{
+	font-family:"FontAwesome";	
+	content: "\f185";
+	font-weight: 200;
+	font-size:3em;
+}
+*/
+
+.theme-selector
+{
+	border-radius:100%;
+	box-shadow: 0px 0px 0px 1px #eee;
+}
