--- a/assets/themes/blossom.css
+++ b/assets/themes/blossom.css
@@ -36,7 +36,7 @@ video
 {
 	background-color:#cbd;
 	color:#fff;
-	--highlight: #f2f;
+	--highlight: #606;
 }
 
 .menu-dropdown
@@ -59,7 +59,7 @@ video
 	box-shadow: 0px 0px 0px 1px #000;
 }
 
-.theme-text::before
+.theme-text::after
 {
 	content:'Blossom';
 }
