--- a/assets/themes/code red.css
+++ b/assets/themes/code red.css
@@ -64,7 +64,7 @@ video:before
 	box-shadow: 0px 0px 0px 1px #000;
 }
 
-.theme-text::before
+.theme-text::after
 {
-	content:'Light';
+	content:'Code Red';
 }
