--- a/assets/themes/dark.css
+++ b/assets/themes/dark.css
@@ -1,8 +1,8 @@
 
 h1, h2, h3, h4, h5, h6, p, div { color:#fff; }
 
-a { color: #0aa; }
-a:hover { color: #0ff; }
+a { color: #a4c; }
+a:hover { color: #f0f; }
 
 body
 {
@@ -62,7 +62,7 @@ video
 	box-shadow: 0px 0px 0px 1px #eee;
 }
 
-.theme-text::before
+.theme-text::after
 {
 	content:'Dark';	
 }
