add project categories

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -9,6 +9,10 @@ h6 { font-size:110%; font-weight:200; padding:0; }
 a { text-decoration:none; }
 a:hover { text-decoration:bold; }
 
+html 
+{
+	scroll-behavior: smooth;
+}
 body
 {
 	font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
@@ -25,7 +29,7 @@ body
 		padding-bottom:10vh; 
 		height:30vh; 
 		text-align:center; 
-		margin:0;
+		margin:0;		
 	}
 }
 @media only screen and (min-width: 800px) {
@@ -36,7 +40,7 @@ body
 	padding-bottom:20vh; 
 	height:50vh; 
 	text-align:center; 
-	margin:0;
+	margin:0;	
 }
 
 }
