--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -71,6 +71,35 @@ td
 
 
 
+input[type=checkbox]
+{
+	margin: 0;
+	appearance:none;
+	-webkit-appearance:none;
+	background-color: transparent;
+	width: 1em;
+	height: 1em;
+
+	
+	transition:0.3s;
+}
+
+input[type=checkbox]:checked
+{
+	color:inherit;
+	
+}
+
+input[type=checkbox]:checked::after
+{
+	content:'-';
+}
+input[type=checkbox]::after
+{
+	content:'+';
+}
+
+
 ::-webkit-scrollbar {
   width: 0px;
 }
@@ -93,7 +122,7 @@ td
 .section { /* background-color:#111; */ background-color:#fff; /* background-color:#fff; */ min-height:20vh; margin:0; overflow:hidden; padding-left:1em; padding-right:1em; padding-bottom:2em; }
 .content { margin:0; padding:0; min-height:100vh; width:100vw; }
 .textbox { margin:0; padding:1em; padding-top:2em; padding-bottom:2em; }
-.landing { background-color:#aaa; margin:0; padding:0; min-height:80vh; }
+.landing { background-color:#aaa; margin:0; padding:0; min-height:80vh; background-repeat: no-repeat; background-size: cover; background-image:url(https://static.vecteezy.com/system/resources/previews/001/987/497/original/abstract-stripes-golden-lines-diagonal-overlap-on-black-background-luxury-stryle-free-vector.jpg); filter:invert(0%) hue-rotate(180deg);}
 .dropper { display:none; }
 
 
@@ -105,21 +134,6 @@ td
 
 
 
-.sidebar > * > input[type="checkbox"] {
-  
-  appearance: none;
-  background-color: #fff;
-  margin: 0;
-  font: inherit;
-  color: currentColor;
-  width: 1.15em;
-  height: 1.15em;
-  border: 0.15em solid currentColor;
-  border-radius: 0.15em;
-  transform: translateY(-0.075em); 
-  display: grid;
-  place-content: center;
-}
 
 .clearfix::after {
   content: "";
@@ -158,7 +172,7 @@ button.thick{}
 .header  .group { height:100%; margin:0; padding:0; }
 .header > .group > button { height:100%; margin:0; }
 .header > * + a { margin-left:1em; }
-
+.header > a { height:100%; margin-bottom:0; display:inline-block; }
 
 
 .footer.thin { height:10vh; }
@@ -181,3 +195,16 @@ button.thick{}
 .group > button:not(:last-child) {
   border-right: none; /* Prevent double borders */
 }
+
+
+
+.collapsible-content 
+{
+	display:none;
+}
+
+input[type=checkbox]:checked + br + .collapsible-content
+{
+	display:block;
+}
+
